phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-03-06 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/Config.class.php, libraries/select_lang.lib.php,
      libraries/footer.inc.php, libraries/ip_allow_deny.lib.php,
      libraries/common.lib.php, libraries/header.inc.php,
      libraries/grab_globals.lib.php, libraries/auth/cookie.auth.lib.php,
      libraries/auth/http.auth.lib.php, libraries/fpdf/fdpf.php:
      replaced $_SERVER with getenv()

2006-03-04 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/swedish: Update, thanks to Björn T. Hallberg - bjornth.
    * import.php, libraries/common.lib.php: bug #1413880, page status not
      preserved on Refresh
    * lang/chinese_traditional: Updates, thanks to Siu Sun.

2006-03-03 Michal Čihař  <michal@cihar.com>
    * libraries/Theme_Manager.class.php: Fix include path (bug #1442008).

2006-03-02 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/session.inc.php and removed .htaccess:
      bug #1411996: now we destroy an auto-started session
    ### 2.8.0-rc2 released from MAINT_2_8_0 branch

2006-03-02 Michal Čihař  <michal@cihar.com>
    * libraries/display_tbl.lib.php: Fix parameter to transformation (bug
      #1440926).
    * libraries/transformations/application_octetstream__hex.inc.php, lang/*:
      Allow to configure how often space is added (RFE #1440384).

2006-02-24 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php: bug #1437754, search combos default to
      key zero
    * lang/swedish: Update, thanks to Björn T. Hallberg - bjornth.

2006-02-23 Michal Čihař  <michal@cihar.com>
    * libraries/config.default.php, libraries/header.inc.php,
      Documentation.html: More replacements for page title (RFE #1408241).
    * contrib/packaging/Fedora/phpMyAdmin.spec: Update.

2006-02-23 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/Config.class.php: bug #1418769 part 1: stat failed for